--- a/ui/html/sass/base/_base.scss
+++ b/ui/html/sass/base/_base.scss
@@ -27,6 +27,7 @@ body {
 
   // // opacity: 0.9;
   // background-size: cover;
+    overflow: hidden;
   
   }
 
