--- a/ui/html/sass/components/_labsys.table.scss
+++ b/ui/html/sass/components/_labsys.table.scss
@@ -42,8 +42,8 @@
     }
 
     & span:nth-child(2):hover {
-       background-color: #5a657a;
-       border-radius: 5px;
+      background-color: #5a657a;
+      border-radius: 5px;
     }
 
     & span:nth-child(2):active {
@@ -67,19 +67,18 @@
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-      margin: .5rem 0 1rem 4rem;
+      margin: 0.5rem 0 1rem 4rem;
       padding: 1rem;
       border: none;
     }
 
     &__btns button {
-       
-        height: 4rem;
-        width: 10rem;
-        background-color: #0964b0;
-        color: white;
-        outline: 1px solid #ccc;
-        border-radius: .5rem;
+      height: 4rem;
+      width: 10rem;
+      background-color: #0964b0;
+      color: white;
+      outline: 1px solid #ccc;
+      border-radius: 0.5rem;
     }
   }
 
@@ -101,20 +100,22 @@
   }
 }
 
-.testclass {
-  transition: background-color 5.5s;
-}
-
 .labsys-table {
+  overflow-y: auto; //-
+  max-height: 70rem; //-
+
+  
   margin: 2rem 6rem 0 2rem;
   border-radius: 5px;
   opacity: 1;
   animation-name: animatetop;
   animation-duration: 0.3s;
   overflow: auto;
-  height: 95%;
+  // height: 95%; //-
+  box-shadow: 5px 5px 10px #131212; //-
 }
 
+////////// Table Styling //////////
 table.blueTable {
   border: 1px solid #1c6ea4;
   background-color: #eeeeee;
@@ -124,35 +125,10 @@ table.blueTable {
   table-layout: fixed;
   width: 100%;
 }
-table.blueTable td,
-table.blueTable th {
-  border: 1px solid #aaaaaa;
-  padding: 3px 2px;
-  word-wrap: break-word;
-}
-table.blueTable tbody td {
-  font-size: 13px;
-}
 
-th:first-child {
-  border-left: none;
-  border-radius: 0.7rem 0 0 0;
-}
-
-th:last-child {
-  border-left: none;
-  border-radius: 0 0.7rem 0 0;
-}
-
-table.blueTable tr:nth-child(even) {
-  background: #d0e4f5;
-}
 table.blueTable thead {
-  // background: #23324e;
-  // background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  // background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  // background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  // border-bottom: 2px solid #444444;
+  position: sticky; //-
+  top: 0; //-
 
   background: #23324e;
   background: -moz-linear-gradient(top, #5a657a 0%, #39465f 66%, #23324e 100%);
@@ -166,17 +142,69 @@ table.blueTable thead {
   border-bottom: 2px solid #444444;
   border-radius: 0.5rem;
 }
+
 table.blueTable thead th {
+  position: sticky; //-
+  top: 0; //-
+
   font-size: 15px;
   font-weight: bold;
   color: #ffffff;
   border-left: 2px solid #d0e4f5;
   cursor: pointer;
+  text-align: center;
 }
+
+table.blueTable td,
+table.blueTable th {
+  border: 1px 2px 1px 2px solid #aaaaaa;
+  padding: 3px 2px;
+  word-wrap: break-word;
+}
+
+table.blueTable thead::before {
+  position: absolute;
+  top: -1px;
+  // left: -2px;
+  content: "";
+  display: block;
+  height: 4.3rem;
+  width: 100%;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 2px solid #23324e;
+}
+
+table.blueTable tbody {
+  overflow: auto;
+  height: 95%;
+}
+
+table.blueTable tbody td {
+  font-size: 13px;
+}
+
 table.blueTable thead th:first-child {
   border-left: none;
 }
 
+// Add radius to the first and last column
+th:first-child {
+  border-left: none;
+  border-radius: 0.7rem 0 0 0;
+}
+
+th:last-child {
+  border-left: none;
+  border-radius: 0 0.7rem 0 0;
+}
+
+// Stripe the table
+table.blueTable tr:nth-child(even) {
+  background: #d0e4f5;
+}
+
+// Style the footer
 table.blueTable tfoot {
   font-size: 14px;
   font-weight: bold;
@@ -192,12 +220,15 @@ table.blueTable tfoot {
   background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #d0e4f5 100%);
   border-top: 2px solid #444444;
 }
+
 table.blueTable tfoot td {
   font-size: 14px;
 }
+
 table.blueTable tfoot .links {
   text-align: right;
 }
+
 table.blueTable tfoot .links a {
   display: inline-block;
   background: #1c6ea4;
@@ -205,15 +236,6 @@ table.blueTable tfoot .links a {
   padding: 2px 8px;
   border-radius: 5px;
 }
-
-table.blueTable thead th {
-  text-align: center;
-  position: relative;
-}
-
-// table.blueTable tr:hover {
-//   background-color: #1b70b6;
-// }
 
 table.blueTable .data-row:hover {
   cursor: pointer;
@@ -258,6 +280,31 @@ table.blueTable .data-row:hover {
   }
 }
 
-.data-row td:nth-child(4):hover {
-  color: yellow;
+// Example of a hover effect for a specific column
+
+// .data-row td:nth-child(4):hover {
+//   color: yellow;
+// }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
