--- a/ui/html/sass/layout/_app-main.scss
+++ b/ui/html/sass/layout/_app-main.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
-  overflow-x: auto;
+  // overflow-x: auto;
   
  
 }
